added section 16 impl