@@ -4,7 +4,6 @@ import com.eazybytes.model.Contact;
 import com.eazybytes.repository.ContactRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.access.prepost.PostFilter;
-import org.springframework.security.access.prepost.PreFilter;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
@@ -25,8 +24,8 @@ public class ContactController {
     @PostFilter("filterObject.contactName != 'Test'")
     public List<Contact> saveContactInquiryDetails(@RequestBody List<Contact> contacts) {
         List<Contact> returnContacts = new ArrayList<>();
-        if(!contacts.isEmpty()) {
-            Contact contact = contacts.getFirst();
+        if (!contacts.isEmpty()) {
+            Contact contact = contacts.get(0);
             contact.setContactId(getServiceReqNumber());
             contact.setCreateDt(new Date(System.currentTimeMillis()));
             Contact savedContact = contactRepository.save(contact);
